--- a/payment/templates/index.html
+++ b/payment/templates/index.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
-{% block title %}LocalGov{% endblock %}
+{% block title %}Payment platform{% endblock %}
 {% block content %}
   <div class="row">
     <div class="small-12 columns">
-      <ul>
-        <li><a href="{{url_for('parking_permit_start')}}">Get a parking permit</a></li>
-      </ul>
    </div>
   </div>
-
 {% endblock %}
