--- a/payment/templates/base.html
+++ b/payment/templates/base.html
@@ -3,25 +3,15 @@
     <meta charset="utf-8">
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{url_for('static', filename='images/icon.png')}}" />
-
-    <title>{% block title %}{% endblock%} | Local Authority</title>
-    <link rel="stylesheet" href="{{url_for('static', filename= 'vendor/roboto-slab-fontface/roboto-slab-fontface.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='vendor/foundation/css/foundation.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
-    <script type="text/javascript" src="{{ url_for('static', filename='vendor/jquery/dist/jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='vendor/foundation/js/foundation.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='vendor/foundation/js/foundation/foundation.alert.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='javascript/main.js') }}"></script>
+    <title>{% block title %}Payment platform{% endblock%}</title>
+    <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/vendor/roboto-slab-fontface/roboto-slab-fontface.css' }}">
+    <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/vendor/foundation/css/foundation.css' }}">
+    <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/css/main.css' }}">
   </head>
   <body>
     <div class="header service">
       <nav class="top-bar" data-topbar>
-        <ul class="title-area">
-          <li class="name">
-          <h1><a href="/">Local Authority</a></h1>
-          </li>
-        </ul>
+        <h1><a href="/">Payment platform</a></h1>
       </nav>
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -44,3 +34,4 @@
     {% endblock %}
   </body>
 </html>
+
