styles and copy

--- a/payment/templates/base.html
+++ b/payment/templates/base.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Payment platform{% endblock%}</title>
     <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/vendor/roboto-slab-fontface/roboto-slab-fontface.css' }}">
+    <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/vendor/font-awesome/css/font-awesome.min.css'}}">
     <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/vendor/foundation/css/foundation.css' }}">
     <link rel="stylesheet" href="{{config.WWW_BASE_URL + '/static/css/main.css' }}">
   </head>
   <body>
     <div class="header service">
       <nav class="top-bar" data-topbar>
-        <h1><a href="/">Payment platform</a></h1>
+        <h1><a href="/" class="iglogo">IG</a> <a href="/">Payments Service</a></h1>
       </nav>
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
