--- a/payment/templates/method.html
+++ b/payment/templates/method.html
@@ -1,11 +1,11 @@
 {% from "_formhelpers.html" import render_field %}
 {% extends "base.html" %}
-{% block title %}LocalGov{% endblock %}
+{% block title %}Idealgov Payments Service{% endblock %}
 {% block content %}
   <div class="row">
     <div class="small-12 columns">
       <form method="post" action="">
-        <h3>Choose a payment method</h3>
+        <h3>How would you like to pay?</h3>
         {{form.method}}
        <button type="submit" class="expand">Next</button>
       </form>
