--- a/payment/templates/method.html
+++ b/payment/templates/method.html
@@ -6,7 +6,7 @@
     <div class="small-12 columns">
       <form method="post" action="">
         <h3>How would you like to pay?</h3>
-        {{form.method}}
+        {{form.method(class_="radio")}}
        <button type="submit" class="expand">Next</button>
       </form>
     </div>
