--- a/payment/templates/base.html
+++ b/payment/templates/base.html
@@ -12,7 +12,7 @@
   <body>
     <div class="header service">
       <nav class="top-bar" data-topbar>
-        <h1><a href="/" class="iglogo">IG</a> <a href="/">Payments Service</a></h1>
+        <h1 class="title"><img id="header_crown" src="{{ config.WWW_BASE_URL + '/static/images/crown_white.png'}}"/><a href="/">Payments Service</a></h1>
       </nav>
     </div>
     {% with messages = get_flashed_messages(with_categories=true) %}
