Hide new card form when a card is selected.
It would be nicer to do this in pure CSS, but the "sibling
of parent" selector is not yet supported by most browsers. Do it
in pure JS instead.

--- a/payment/templates/pay.html
+++ b/payment/templates/pay.html
@@ -12,9 +12,9 @@
         </div>
       <form action="" method="post">
         <p>Choose a previously registered card:</p>
-        <select>
-          <option></option>
-          <option>**** **** **** 1982</>
+        <select id="select-card">
+          <option value=""></option>
+          <option value="card">**** **** **** 1982</>
         </select>
         <p>Or enter a new one:</p>
         {{ render_field(form.card_name) }}
@@ -25,4 +25,5 @@
       </form>
     </div>
   </div>
+  <script src="{{config.BASE_URL + '/static/javascript/pay.js' }}"></script>
 {% endblock %}
