--- a/payment/templates/method.html
+++ b/payment/templates/method.html
@@ -4,10 +4,10 @@
 {% block content %}
   <div class="row">
     <div class="small-12 columns">
+    <h3>How would you like to pay?</h3>
       <form method="post" action="">
-        <h3>How would you like to pay?</h3>
         {{form.method(class_="radio")}}
-       <button type="submit" class="expand">Next</button>
+       <button type="submit" class="expand button">Next</button>
       </form>
     </div>
   </div>
