--- a/payment/templates/pay.html
+++ b/payment/templates/pay.html
@@ -24,7 +24,7 @@
           {{ render_field(form.expires)}}
           {{ render_field(form.security_code) }}
         </fieldset>
-        <button type="submit" class="expand expand">Make payment</button>
+        <button type="submit" class="expand button">Make payment</button>
       </form>
     </div>
   </div>
